--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4"
   }
 }
