--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.4"
+    "@prisma/client": "^5.1.1",
+    "@tailwindcss/forms": "^0.5.4",
+    "prisma": "^5.1.1"
   }
 }
