--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@prisma/client": "^5.1.1",
     "@tailwindcss/forms": "^0.5.4",
+    "@types/bcrypt": "^5.0.0",
     "prisma": "^5.1.1"
   }
 }
