--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -28,7 +29,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "@tailwindcss/forms": "^0.5.4",
     "@types/bcrypt": "^5.0.0",
     "prisma": "^5.1.1"
