--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.1",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
