--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.3.0",
     "framer-motion": "^10.16.1",
     "lodash": "^4.17.21",
     "next": "13.4.19",
