--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.0",
@@ -33,6 +34,8 @@
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.22.2",
@@ -42,6 +45,8 @@
     "@prisma/client": "^5.2.0",
     "@tailwindcss/forms": "^0.5.4",
     "@types/bcrypt": "^5.0.0",
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
