--- a/package.json
+++ b/package.json
@@ -10,15 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
-    "@tanstack/react-query": "^4.33.0",
-    "@tanstack/react-query-devtools": "^4.33.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
@@ -37,15 +33,12 @@
     "react-player": "^2.12.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "zod": "^3.22.2",
-    "zustand": "^4.4.1"
+    "typescript": "5.1.6"
   },
   "devDependencies": {
     "@prisma/client": "^5.2.0",
     "@tailwindcss/forms": "^0.5.4",
     "@types/bcrypt": "^5.0.0",
-    "prisma": "^5.2.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-textshadow": "^2.1.3"
   }
