--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-player": "^2.12.0",
+    "recoil": "^0.7.7",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
