--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.0",
+    "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
@@ -34,7 +35,7 @@
     "swr": "^2.2.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@prisma/client": "^5.2.0",
