--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.1",
+    "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
