--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
     "@t3-oss/env-core": "^0.6.1",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@types/node": "20.5.1",
