--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "@t3-oss/env-core": "^0.6.1",
@@ -24,9 +25,11 @@
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.1",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "npm": "^9.8.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
