--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@prisma/client": "^5.2.0",
     "@tailwindcss/forms": "^0.5.4",
     "@types/bcrypt": "^5.0.0",
+    "@types/js-cookie": "^3.0.3",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-textshadow": "^2.1.3"
   }
