--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.14.6",
     "@t3-oss/env-core": "^0.6.1",
     "@t3-oss/env-nextjs": "^0.6.1",
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
