--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^4.10.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.12.0",
+    "react-scroll-to-top": "^3.0.0",
     "recoil": "^0.7.7",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
